--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,5 @@
+@import "./hamburgerAnimation";
+
 *,
 *::before,
 *::after {
@@ -55,7 +57,7 @@ body {
 	background-color: var(--vary-light-gray);
 	padding: 1rem 0;
 	border-radius: 10px;
-	visibility: hidden;
+	z-index: 10;
 
 	.nav--list--btn {
 		display: none;
@@ -65,6 +67,19 @@ body {
 		cursor: pointer;
 		opacity: 0.7;
 	}
+}
+
+// hidden nav
+.hidden {
+	visibility: hidden;
+}
+
+.dark {
+	filter: brightness(50%);
+}
+
+.drop-shadow {
+	filter: drop-shadow(0 0 10rem var(--dark-blue));
 }
 
 .hero {
@@ -398,7 +413,7 @@ body {
 		cursor: pointer;
 	}
 
-	.hamburger {
+	.hamburger-icon {
 		display: none;
 	}
 
