--- a/css/style.css
+++ b/css/style.css
@@ -368,17 +368,19 @@ body {
   opacity: 0.9;
   cursor: pointer;
 }
-.footer .footer--nav--ul {
+.footer .footer--nav {
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
+  text-align: left;
+  margin-bottom: 2rem;
+}
+.footer .footer--nav--ul {
+  display: flex;
+  flex-direction: column;
   gap: 1rem;
-  margin: 0 0 2rem 0;
   list-style: none;
   justify-content: space-evenly;
-  gap: 3rem;
-}
-.footer .footer--nav--ul .footer--nav--item {
-  margin: 1rem 0;
 }
 .footer .footer--nav--ul .footer--nav--item:hover {
   color: var(--bright-red);
