--- a/style.scss
+++ b/style.scss
@@ -352,18 +352,22 @@ body {
 		}
 	}
 
-	.footer--nav--ul {
+	.footer--nav {
 		display: flex;
 		flex-direction: row;
+		justify-content: space-around;
+		text-align: left;
+		margin-bottom: 2rem;
+	}
+
+	.footer--nav--ul {
+		display: flex;
+		flex-direction: column;
 		gap: 1rem;
-		margin: 0 0 2rem 0;
+		// margin: 0 0 2rem 0;
 		list-style: none;
 		justify-content: space-evenly;
-		gap: 3rem;
-
-		.footer--nav--item {
-			margin: 1rem 0;
-		}
+		// gap: 3rem;
 
 		.footer--nav--item:hover {
 			color: var(--bright-red);
