--- a/css/style.css
+++ b/css/style.css
@@ -465,6 +465,9 @@ body {
   .testimonials .testimonial--card .testimonial--text {
     width: 100%;
   }
+  .name {
+    font-size: var(--step-0);
+  }
   .dots {
     display: none;
   }
